src/main/java/com/example/postBlog/error/PostDoesNotExistException.java
package com.example.postBlog.error;

public class PostDoesNotExistException extends RuntimeException {
    
}
